Revert "Aggressive GC/memory args."
This reverts commit 523ceb6d9fd2ecf09baebe1125aefec254c1ad92. GC not happy.